// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render 1`] = `
<div>
  <div
    class="sc-AxjAm cEdyhe"
    color="primary"
  />
</div>
`;

exports[`Label should render a large one 1`] = `
<div>
  <div
    class="sc-AxjAm HqIZD"
    color="primary"
  />
</div>
`;

exports[`Label should render a small one 1`] = `
<div>
  <div
    class="sc-AxjAm epRDxu"
    color="primary"
  />
</div>
`;

exports[`Label should render danger color 1`] = `
<div>
  <div
    class="sc-AxjAm exlmyq"
    color="danger"
  />
</div>
`;

exports[`Label should render neutral color 1`] = `
<div>
  <div
    class="sc-AxjAm iTQtEO"
    color="neutral"
  />
</div>
`;

exports[`Label should render primary color 1`] = `
<div>
  <div
    class="sc-AxjAm cEdyhe"
    color="primary"
  />
</div>
`;

exports[`Label should render success color 1`] = `
<div>
  <div
    class="sc-AxjAm fwmflK"
    color="success"
  />
</div>
`;

exports[`Label should render warning color 1`] = `
<div>
  <div
    class="sc-AxjAm knWhbm"
    color="warning"
  />
</div>
`;
